--- a/index.html
+++ b/index.html
@@ -8,7 +8,88 @@
 	<link rel="stylesheet" href="css/all.min.css">
 	<link rel="stylesheet" href="css/styles.css">
 </head>
+
 <body>
+
+<!-- Start of Navbar -->
+
+<nav class="navbar navbar-default">
+	<div class="container-fluid">
+		<div class="navbar-header">
+			<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#mainNavbar">
+				<span class="sr-only">Toggle Navigation</span>
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+			</button>
+			<a href="" class="navbar-brand">
+				<img src="img/name-01.png" alt="logo">
+			</a>
+		</div>
+		<div class="collapse navbar-collapse" id="mainNavbar">
+			<ul class="nav navbar-hav navbar-right">
+				<li class="active">
+					<a href="#">Home <span class="sr-only">(current)</span>
+					</a>
+				</li>
+				<li><a href="#our_story">Our Story</a></li>
+				<li><a href="#review">Review</a></li>
+				<li><a href="#menu">Menue</a></li>
+				<li><a href="#contact">Contact</a></li>
+			</ul>
+		</div>
+	</div>
+</nav>
+
+<!-- End of Navbar -->
+
+<!-- Start of Carousel -->
+
+<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+	<!-- Indicators -->
+	<ol class="carousel-indicators">
+	  <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+	  <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+	  <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+	</ol>
+  
+	<!-- Wrapper for slides -->
+	<div class="carousel-inner" role="listbox">
+	  <div class="item active main_img1">
+		<img src="img/logo-01.png" alt="carousel logo" class="img-responsive center-block main_logo">
+	  </div>
+	  <div class="item main_img2">
+		<div class="carousel-caption">
+		  <h1>Eat Local</h1>
+		  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima accusantium illo facilis ipsam mollitia voluptatem.</p>
+		  <a href="#" class="btn btn-lg btn-primary" role="button">Learn More</a>
+		</div>
+	  </div>
+	  	<div class="item main_img3">
+			  <div class="carousel-caption">
+				  <h1>From Farm To Table</h1>
+				  <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ullam similique praesentium officiis voluptatem nostrum provident.</p>
+				  <a href="" role="button" class="btn btn-lg btn-primary">Learn More</a>
+			  </div>
+		  </div>
+	</div>
+  
+	<!-- Controls -->
+	<a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+	  <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+	  <span class="sr-only">Previous</span>
+	</a>
+	<a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+	  <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+	  <span class="sr-only">Next</span>
+	</a>
+  </div>
+
+<!-- End of Carousel -->
+
+
+
+
 
 	<!-- javascript	 -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
