worked on our story and review section. added css for both. need to add menu and contact us sections

--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 			</button>
-			<a href="" class="navbar-brand">
+			<a href="#" class="navbar-brand">
 				<img src="img/name-01.png" alt="logo">
 			</a>
 		</div>
 		<div class="collapse navbar-collapse" id="mainNavbar">
-			<ul class="nav navbar-hav navbar-right">
+			<ul class="nav navbar-nav navbar-right">
 				<li class="active">
 					<a href="#">Home <span class="sr-only">(current)</span>
 					</a>
@@ -87,8 +87,38 @@
 
 <!-- End of Carousel -->
 
+<!-- Our Story Section -->
 
+<div id="our_story" class="container-fluid wrap">
+	<div class="row">
+		<div class="col-sm-4 col-xs-offset-1">
+			<h1>Our Story</h1>
+			<h3>One Man. One Dream</h3>
+		</div>
+		<div class="col-sm-5 col-sm-offset-1">
+			<h2 id="story_year">1982</h2>
+			<p class="text-justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae, debitis, quaerat iure exercitationem enim, modi fugiat explicabo esse nesciunt adipisci assumenda mollitia commodi a. Totam architecto sunt, deserunt sint cumque magni natus omnis nemo illum, similique, laboriosam blanditiis nesciunt assumenda!</p>
+			<p class="text-justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae, debitis, quaerat iure exercitationem enim, modi fugiat explicabo esse nesciunt adipisci assumenda mollitia commodi a. Totam architecto sunt, deserunt sint cumque magni natus omnis nemo illum, similique, laboriosam blanditiis nesciunt assumenda!</p>
+			<p class="text-justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae, debitis, quaerat iure exercitationem enim, modi fugiat explicabo esse nesciunt adipisci assumenda mollitia commodi a. Totam architecto sunt, deserunt sint cumque magni natus omnis nemo illum, similique, laboriosam blanditiis nesciunt assumenda!</p>
+			<p class="text-justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae, debitis, quaerat iure exercitationem enim, modi fugiat explicabo esse nesciunt adipisci assumenda mollitia commodi a. Totam architecto sunt, deserunt sint cumque magni natus omnis nemo illum, similique, laboriosam blanditiis nesciunt assumenda!</p>
+		</div>
+	</div>
+</div>
 
+<!-- End of Our Story Section -->
+
+<!-- Start of Review Section -->
+
+<div id="review" class="container-fluid">
+	<div class="row text-center">
+		<div class="col-sm-8 center">
+			<h1>Fresno Bee</h1>
+			<p>"The freshest and best infredients come togeter to make some of the best food I have ever ate. You can really taste the Central Valley in every bite."</p>
+		</div>
+	</div>
+</div>
+
+<!-- End of Review Section -->
 
 
 	<!-- javascript	 -->
