finished menu section. still need css for menu as well as contact section

--- a/index.html
+++ b/index.html
@@ -120,6 +120,116 @@
 
 <!-- End of Review Section -->
 
+<!-- Start of Menu Section -->
+
+<div id="menu">
+	<div class="container">
+		<div class="row text-center">
+			<h1>Menu</h1>
+		</div>
+		<div class="navbar">
+			<ul class="nav nav-tabs nav-justified">
+				<li class="active"><a href="#appetizer" data-toggle="tab">APPETIZER</a></li>
+				<li><a href="#lunch" data-toggle="tab">LUNCH</a></li>
+				<li><a href="#dinner" data-toggle="tab">DINNER</a></li>
+				<li><a href="#dessert" data-toggle="tab">DESSERT</a></li>
+			</ul>
+			<div class="tab-content">
+				<div id="appetizer" class="tab-pane fade active in">
+					<div class="col-sm-3 col-xs-6 food">
+						<img src="img/dip.jpg" alt="dip item" class="img-thumbnail img-responsive">
+						<h3>Appetizer 1</h3>
+						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint aperiam doloribus deserunt odit possimus natus rem in dolorum quaerat consequuntur! Quod eum tenetur sint voluptatibus iure.</p>
+					</div>
+					<div class="col-sm-3 col-xs-6 food">
+						<img src="img/eggplant.jpg" alt="eggplant item" class="img-thumbnail img-responsive">
+						<h3>Appetizer 2</h3>
+						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat similique, error, pariatur modi laudantium placeat architecto accusamus iste minus, iusto vitae omnis adipisci qui praesentium rem.</p>
+					</div>
+					<div class="col-sm-3 col-xs-6 food">
+						<img src="img/meat.jpg" alt="meat item" class="img-thumbnail img-responsive">
+						<h3>Appetizer 3</h3>
+						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore, illum excepturi aliquid ipsam, similique voluptatem beatae animi obcaecati dolorum dicta dolorem. Consequatur voluptatibus aperiam culpa eos?</p>
+					</div>
+					<div class="col-sm-3 col-xs-6 food">
+						<img src="img/bruschetta.jpg" alt="bruschetta item" class="img-thumbnail img-responsive">
+						<h3>Appetizer 4</h3>
+						<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Animi, exercitationem? Nisi esse impedit molestias voluptate. Exercitationem cumque commodi aperiam, laboriosam ducimus voluptas sit atque delectus earum!</p>
+					</div>
+				</div>
+				<div id="lunch" class="tab-pane fade">
+					<div class="col-sm-3 col-xs-6 food">
+						<img src="img/lunch1.jpg" alt="beef slider lunch" class="img-thumbnail img-responsive">
+						<h3>Lunch 1</h3>
+						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam est ex sequi, autem quis aspernatur totam sapiente magni pariatur quia voluptatibus quasi illum neque laboriosam aperiam.</p>
+					</div>
+					<div class="col-sm-3 col-xs-6 food">
+						<img src="img/lunch2.jpg" alt="sandwhich lunch" class="img-thumbnail img-responsive">
+						<h3>Lunch 2</h3>
+						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus, expedita ullam ipsam, dolores corporis facere neque minima qui maiores illum ad sapiente aspernatur odit assumenda laboriosam?</p>
+					</div>
+					<div class="col-sm-3 col-xs-6 food">
+						<img src="img/lunch3.jpg" alt="burger lunch" class="img-thumbnail img-responsive">
+						<h3>Lunch 3</h3>
+						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem deserunt suscipit commodi distinctio asperiores ea accusantium atque! Minima exercitationem similique reiciendis quisquam molestiae illo, animi tempora.</p>
+					</div>
+					<div class="col-sm-3 col-xs-6 food">
+						<img src="img/lunch4.jpg" alt="chicken slider lunch" class="img-thumbnail img-responsive">
+						<h3>Lunch 4</h3>
+						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem adipisci dolores ullam similique soluta? Exercitationem provident optio doloribus sit molestias modi fugit harum ea dicta deserunt.</p>
+					</div>
+				</div>
+				<div id="dinner" class="tab-pane fade">
+					<div class="col-sm-3 col-xs-6 food">
+						<img src="img/dinner1.jpg" alt="meat dinner" class="img-thumbnail img-responsive">
+						<h3>Dinner 1</h3>
+						<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Non facere obcaecati exercitationem, maiores voluptas reprehenderit deleniti molestias sunt, sequi natus eos odio! Quia veniam quam vero.</p>
+					</div>
+					<div class="col-sm-3 col-xs-6 food">
+						<img src="img/dinner2.jpg" alt="steak and egg dinner" class="img-thumbnail img-responsive">
+						<h3>Dinner 2</h3>
+						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi minima corrupti soluta ad amet officia, illum quibusdam natus iusto quis deleniti eos similique molestias enim reiciendis.</p>
+					</div>
+					<div class="col-sm-3 col-xs-6 food">
+						<img src="img/dinner3.jpg" alt="chicken dinner" class="img-thumbnail img-responsive">
+						<h3>Dinner 3</h3>
+						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem cum hic velit necessitatibus quod, illum iure suscipit quam, ipsam dolores facere error minima, numquam vitae quos!</p>
+					</div>
+					<div class="col-sm-3 col-xs-6 food">
+						<img src="img/dinner4.jpg" alt="salad dinner" class="img-thumbnail img-responsive">
+						<h3>Dinner 4</h3>
+						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis commodi pariatur totam delectus vitae vero optio quibusdam, odio adipisci ipsa similique! Vero sint atque ea eum?</p>
+					</div>
+				</div>
+				<div id="dessert" class="tab-pane fade">
+					<div class="col-sm-3 col-xs-6 food">
+						<img src="img/dessert1.jpg" alt="strawberry dessert" class="img-thumbnail img-responsive">
+						<h3>Dessert 1</h3>
+						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat, natus, voluptates necessitatibus recusandae consequatur omnis sit laudantium, voluptatem expedita dolorem ut hic reiciendis est eum neque.</p>
+					</div>
+					<div class="col-sm-3 col-xs-6 food">
+						<img src="img/dessert2.jpg" alt="chocolate ice cream" class="img-thumbnail img-responsive">
+						<h3>Dessert 2</h3>
+						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam perferendis eos voluptatum atque obcaecati ut sequi illum beatae doloribus totam, quas voluptas esse, repudiandae ea sit.</p>
+					</div>
+					<div class="col-sm-3 col-xs-6 food">
+						<img src="img/dessert3.jpg" alt="parfait" class="img-thumbnail img-responsive">
+						<h3>Dessert 3</h3>
+						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque praesentium voluptates, aliquam laborum porro dolorem? Similique, maiores! Aspernatur consequuntur autem in eaque sit necessitatibus est facilis.</p>
+					</div>
+					<div class="col-sm-3 col-xs-6 food">
+						<img src="img/dessert4.jpg" alt="bundt cake" class="img-thumbnail img-responsive">
+						<h3>Dessert 4</h3>
+						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti ipsum mollitia hic eligendi doloremque, sint quidem, maxime voluptates voluptate debitis voluptatum illo nostrum blanditiis. Doloremque, quibusdam?</p>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+
+<!-- End of Menu Section -->
+
 
 	<!-- javascript	 -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
