added contact section. added css to menu and contact section. need to add iframe

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 					<div class="col-sm-3 col-xs-6 food">
 						<img src="img/bruschetta.jpg" alt="bruschetta item" class="img-thumbnail img-responsive">
 						<h3>Appetizer 4</h3>
-						<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Animi, exercitationem? Nisi esse impedit molestias voluptate. Exercitationem cumque commodi aperiam, laboriosam ducimus voluptas sit atque delectus earum!</p>
+						<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illum deleniti soluta, iusto ullam ipsa nam, similique mollitia commodi nihil iure veritatis officia enim inventore itaque quo.</p>
 					</div>
 				</div>
 				<div id="lunch" class="tab-pane fade">
@@ -171,7 +171,7 @@
 					<div class="col-sm-3 col-xs-6 food">
 						<img src="img/lunch3.jpg" alt="burger lunch" class="img-thumbnail img-responsive">
 						<h3>Lunch 3</h3>
-						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem deserunt suscipit commodi distinctio asperiores ea accusantium atque! Minima exercitationem similique reiciendis quisquam molestiae illo, animi tempora.</p>
+						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi, nesciunt atque? Repudiandae cumque tempora, et iure perspiciatis eaque nobis nostrum consequatur quasi, magni a, recusandae culpa?.</p>
 					</div>
 					<div class="col-sm-3 col-xs-6 food">
 						<img src="img/lunch4.jpg" alt="chicken slider lunch" class="img-thumbnail img-responsive">
@@ -183,17 +183,17 @@
 					<div class="col-sm-3 col-xs-6 food">
 						<img src="img/dinner1.jpg" alt="meat dinner" class="img-thumbnail img-responsive">
 						<h3>Dinner 1</h3>
-						<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Non facere obcaecati exercitationem, maiores voluptas reprehenderit deleniti molestias sunt, sequi natus eos odio! Quia veniam quam vero.</p>
+						<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sint ipsum eos suscipit, pariatur optio earum vel magni, quam beatae qui sit. Cumque repellendus quas quam modi.</p>
 					</div>
 					<div class="col-sm-3 col-xs-6 food">
 						<img src="img/dinner2.jpg" alt="steak and egg dinner" class="img-thumbnail img-responsive">
 						<h3>Dinner 2</h3>
-						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi minima corrupti soluta ad amet officia, illum quibusdam natus iusto quis deleniti eos similique molestias enim reiciendis.</p>
+						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente modi, ad omnis blanditiis cumque eum beatae culpa eveniet corporis vel nisi nemo officia unde, tempora esse!</p>
 					</div>
 					<div class="col-sm-3 col-xs-6 food">
 						<img src="img/dinner3.jpg" alt="chicken dinner" class="img-thumbnail img-responsive">
 						<h3>Dinner 3</h3>
-						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem cum hic velit necessitatibus quod, illum iure suscipit quam, ipsam dolores facere error minima, numquam vitae quos!</p>
+						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae illo in quis qui id quasi, porro hic ullam libero sequi dignissimos. Voluptate fugit id officiis nobis!</p>
 					</div>
 					<div class="col-sm-3 col-xs-6 food">
 						<img src="img/dinner4.jpg" alt="salad dinner" class="img-thumbnail img-responsive">
@@ -205,7 +205,7 @@
 					<div class="col-sm-3 col-xs-6 food">
 						<img src="img/dessert1.jpg" alt="strawberry dessert" class="img-thumbnail img-responsive">
 						<h3>Dessert 1</h3>
-						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat, natus, voluptates necessitatibus recusandae consequatur omnis sit laudantium, voluptatem expedita dolorem ut hic reiciendis est eum neque.</p>
+						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum aliquid optio a sint commodi perferendis vitae. Illum ea ipsam fugit obcaecati temporibus excepturi ratione, commodi quia!</p>
 					</div>
 					<div class="col-sm-3 col-xs-6 food">
 						<img src="img/dessert2.jpg" alt="chocolate ice cream" class="img-thumbnail img-responsive">
@@ -215,12 +215,12 @@
 					<div class="col-sm-3 col-xs-6 food">
 						<img src="img/dessert3.jpg" alt="parfait" class="img-thumbnail img-responsive">
 						<h3>Dessert 3</h3>
-						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque praesentium voluptates, aliquam laborum porro dolorem? Similique, maiores! Aspernatur consequuntur autem in eaque sit necessitatibus est facilis.</p>
+						<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Porro iusto perspiciatis modi eveniet cumque magni doloribus? Enim quasi esse doloremque est animi incidunt vero deleniti tempore?</p>
 					</div>
 					<div class="col-sm-3 col-xs-6 food">
 						<img src="img/dessert4.jpg" alt="bundt cake" class="img-thumbnail img-responsive">
 						<h3>Dessert 4</h3>
-						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti ipsum mollitia hic eligendi doloremque, sint quidem, maxime voluptates voluptate debitis voluptatum illo nostrum blanditiis. Doloremque, quibusdam?</p>
+						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero facilis tempore nihil dolores a ut corrupti itaque aliquam. Ipsam, amet voluptas eius illum libero placeat ipsum?</p>
 					</div>
 				</div>
 			</div>
@@ -229,6 +229,70 @@
 </div>
 
 <!-- End of Menu Section -->
+
+<!-- Start of Contact Section -->
+
+<div id="contact">
+	<div class="container-fluid">
+		<div class="col-sm-8 col-sm-offset-2">
+			<div class="row">
+				<div class="col-sm-12">
+					<h1 class="text-uppercase">Contact Us</h1>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-sm-12">
+					<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nesciunt quia laborum accusantium incidunt voluptate adipisci!</p>
+				</div>
+			</div>
+			<div class="row contact_bottom">
+				<div class="col-md-6">
+					<div class="col-sm-12 contact_form">
+						<form action="">
+							<div class="form-group">
+								<label for="name">Name:<span></span>
+								</label>
+								<input type="text" class="form-control" placeholder="Type name here">
+							</div>
+							<div class="form-group">
+								<label for="email">E-mail:<span></span>
+								</label>
+								<input type="text" class="form-control" placeholder="Type e-mail">
+							</div>
+							<div class="form-group">
+								<label for="subject">Subject:<span></span>
+								</label>
+								<input type="text" class="form-control" placeholder="Your subject">
+							</div>
+							<div class="form-group">
+								<label for="message">Message:<span></span>
+								</label>
+								<textarea cols="30" rows="10" class="form-control" placeholder="Please let us know your questions or concerns."></textarea>
+							</div>
+							<div class="checkbox">
+								<label for=""><input type="checkbox">I'm not a robot</label>
+							</div>
+							<button type="submit" class="btn btn-default center-block">Send Message</button>
+							<p class="text-center" id="contact_fine_print">All fields marked <span>*</span> are mandatory</p>
+						</form>
+					</div>
+				</div>
+				<div class="col-md-5">
+					<address>
+						<strong>Restaurante</strong>
+						<br>
+						123 Fulton St.
+						<br>
+						Fresno, Ca 93728
+						<br>
+						P: 123 456-7890
+					</address>
+					iframe here
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
 
 
 	<!-- javascript	 -->
